# practical-ai-act

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CNAME  CONTRIBUTING.md  README.md  config.py  mkdocs.yml  pyproject.toml  workspace.yaml
.github/workflows/: docs.yaml  python.yaml
compliance_journey/step00_minimal_pipeline/: config.py  predict-demo.http  run_train_classifier.py
compliance_journey/step00_minimal_pipeline/asec/: data.py  features.py  model_factory.py  preprocessing.py
compliance_journey/step00_minimal_pipeline/hr_assistant/: main.py
compliance_journey/step01_logging/: fill_record_db.py  run_train_classifier.py
compliance_journey/step01_logging/asec/: data.py  evaluation.py  tracking.py
compliance_journey/step01_logging/hr_assistant/: main.py
data/: income_data_processed.csv
deploy/: compose.lakefs.yml  compose.local.yml  compose.model.yml
deploy/app/: Dockerfile
deploy/dagster/: Dockerfile  Dockerfile.income_prediction  Dockerfile.salary_prediction  dagster.yaml  workspace.yaml
deploy/grafana/dashboards/: fastapi.json  mlflow.json  mlserver.json
deploy/mlflow/: Dockerfile
deploy/model/: Dockerfile  download_model_artifacts.py  model-settings.json  pyproject.toml  runtime.py  settings.json
deploy/nannyml/: Dockerfile  main.py
deploy/postgres/: init-dbs.sh
deploy/prometheus/: prometheus.yml
development/: 404.html  index.html  objects.inv  sitemap.xml
development/_styles/: extra.css
development/_theme_overrides/: main.html
development/_theme_overrides/partials/: copyright.html
development/acknowledgments/: index.html
development/assets/javascripts/: bundle.c8b220af.min.js
development/conformity/: _engineering-info-box.partial  index.html
development/conformity/accuracy/: index.html
development/conformity/accuracy-robustness-cybersecurity/: index.html
development/conformity/bias/: index.html
development/conformity/cybersecurity/: index.html
development/conformity/data-governance/: index.html
development/conformity/documents/: index.html
development/conformity/fairness/: index.html
development/conformity/human-oversight/: index.html
development/conformity/instructions-for-use/: index.html
development/conformity/interoperability/: index.html
development/conformity/privacy-and-data-security/: index.html
development/conformity/record-keeping/: index.html
development/conformity/risk-management-system/: index.html
development/conformity/robustness/: index.html
development/conformity/technical-documentation/: index.html
development/engineering-practice/: index.html
development/engineering-practice/accuracy/: index.html
development/engineering-practice/bias-mitigation/: index.html
development/engineering-practice/containerization/: index.html
development/engineering-practice/data-governance/: index.html
development/engineering-practice/data-versioning/: index.html
development/explanations/: index.html
development/getting-started/: index.html
development/how-to/: index.html
development/imprint/: index.html
development/readers-guide/: index.html
development/search/: search_index.json
development/showcase/: index.html
development/tags/: index.html
docs/: .editorconfig  acknowledgments.md  imprint.md  index.md  readers-guide.md
docs/_styles/: extra.css  theme.css
docs/_theme_overrides/: main.html
docs/conformity/: _engineering-info-box.partial  accuracy-robustness-cybersecurity.md  accuracy.md  bias.md  data-governance.md  fairness.md  human-oversight.md  index.md  instructions-for-use.md  privacy-and-data-security.md  record-keeping.md  risk-management-system.md  robustness.md  technical-documentation.md
docs/engineering-practice/: _compliance-info-box.partial  _key-technologies-info.partial  accuracy.md  containerization.md  data-governance.md  data-versioning.md  experiment-tracking.md  explainability.md  index.md  inference-log.md  model-cards.md  model-monitoring.md  model-registry.md  model-serving.md  operational-monitoring.md  orchestration.md  reference-architecture.md
docs/explanations/: accuracy.md  bias.md  cybersecurity.md  data-governance.md  explainability.md  interoperability.md  privacy-and-data-security.md  record-keeping.md  robustness.md  technical-documentation.md  traceability.md  transparency.md
docs/getting-started/: ai-act-in-a-nutshell.md  index.md
docs/how-to/: data-versioning.md  experiment-tracking.md  explainability.md  inference-log.md  model-monitoring.md  model-registry.md  reference-architecture.md
docs/readers-guide/: index.md
docs/showcase/: index.md  risk-assessment.md  risk-classification.md  system-overview.md
latest/: 404.html  index.html  objects.inv  sitemap.xml
latest/_styles/: extra.css  logo-swap.css  theme.css
latest/conformity/: index.html
latest/engineering-practice/: _compliance-info-box.partial  index.html
latest/imprint/: index.html
latest/readers-guide/: index.html
latest/search/: search_index.json
latest/showcase/: index.html
notebooks/: income_data_preprocessing.ipynb  income_prediction.ipynb
risk-management/: risk_assessment.md  risk_classification.md
scripts/: config.py  evidently_report.py  fill_record_db.py  hello_twai.py  nannyml_report.py  predict-demo.http  run_classfication.py  run_classification_adult.py  run_classification_feature_ablation.py  run_simple_request.py  run_train_classifier.py
src/adult/: data.py  features.py  model_factory.py  pipeline.py  preprocessing.py
src/asec/: data.py  evaluation.py  fairness.py  features.py  model_factory.py  nannyml.py  tracking.py  util.py
src/hr_assistant/: config.py  main.py  util.py
src/income_prediction/: __init__.py  census_asec_data_description.py  config.py  constants.py  data.py  jobs.py  pipeline.py  sensors.py
src/markdown_ex/: __init__.py  nav_graph.py
src/salary_prediction/: __init__.py  constants.py  types.py
src/statlog/: data.py  features.py  model_factory.py
tests/asec/: test_fairness.py  test_features.py  test_util.py
tests/dagster/: test_definitions.py
(+137 files in other folders)
