[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "hr-assistant"
version = "0.1.0"
description = "An ML assistant for HR professionals."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["more-itertools>=10.5.0", "numpy>2", "pandas>=2.2.3"]

[dependency-groups]
docs = [
    "mike",
    "mkdocs",
    "mkdocs-callouts",
    "mkdocs-gen-files",
    "mkdocs-include-dir-to-nav",
    "mkdocs-literate-nav",
    "mkdocs-section-index",
    "mkdocs-material",
    "mkdocstrings[python]",
    "mkdocs-git-revision-date-localized-plugin",
]
train = [
    "mlflow>=2.19.0",
    "kaleido==0.2.1",
    "dagster>=1.9.10",
    "dagster-webserver>=1.9.10",
    "lightgbm>=4.5.0",
    "sensai>=1.3.0",
    "sensai-utils>=1.4.0",
    "scikit-learn<1.6",          # to avoid errors with xgboost related to sklearn tags, cf. https://stackoverflow.com/questions/79290968/super-object-has-no-attribute-sklearn-tags
    "ucimlrepo>=0.0.7",
    "xgboost>=2.1.3",
]
deploy = [
    "fastapi>=0.110",
    "mlserver>=1.6.0",
    "mlserver-mlflow>=1.6.0",
    "duckdb>=1.1.3",
    "httpx>=0.28.1",
    "prometheus-fastapi-instrumentator>=7.0.2",
]
monitoring = ["nannyml>=0.13.0", "evidently>=0.6.1"]
dev = ["ipython>=8.32.0", "pytest>=8.3.4", "ruff>=0.9.3"]

[tool.ruff]
preview = true
exclude = ["openapi_client"]
line-length = 88

# FIXME: Exclude existing non-compliant code for now
extend-exclude = ["scripts/**", "src/income_prediction/**"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "W",
    "B",
    "UP",
    "C4",
    "PYI",
    "FAST",
    "T10",  # prevent stray debug breakpoints
]
ignore = [
    "E501",    # Line too long
    "RUF029",  # Unused Async (FastAPI routes are async)
    "FAST003", # FastAPI unused path parameter (they can be consumed by dependencies)
]

[tool.dagster]
module_name = "income_prediction"
code_location_name = "income_prediction"
